welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:15: error: not found: value gety
			setPos(0,gety()+1)
                                 ^